--- a/app/src/main/res/drawable/buttons_style_on.xml
+++ b/app/src/main/res/drawable/buttons_style_on.xml
@@ -17,8 +17,8 @@
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="10dip" />
-            <stroke android:width="2dip" android:color="#93BCC6" />
-            <gradient android:angle="-90" android:startColor="#41515C" android:endColor="#4C7795" />
+            <stroke android:width="2dip" android:color="#4C7795" />
+            <!--<gradient android:angle="-90" android:startColor="#41515C" android:endColor="#4C7795" />-->
         </shape>
     </item>
 </selector>
