--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00587e</color>
-    <color name="colorPrimaryDark">#00587e</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#4C7795</color>
+    <color name="colorPrimaryDark">#4C7795</color>
+    <color name="colorAccent">#4C7795</color>
 </resources>
